feat(docker): fully functional docker image

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 PHONE_NUMBER=your phone number
 PIN=your pin
+PUBLIC_KEY=execute the pair script to get the value
+PRIVATE_KEY=execute the pair script to get the value
