--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
     "build": "bun build src/index.ts --target bun --outdir ./dist",
     "start": "NODE_ENV=production bun dist/index.js",
     "check": "biome check",
-    "check:fix": "biome check --fix --unsafe"
+    "check:fix": "biome check --fix --unsafe",
+    "pair:x86": "bun build --compile --minify --sourcemap --target=bun-linux-x64-modern ./src/pair.ts --outfile pair-x86",
+    "pair:aarch64": "bun build --compile --minify --sourcemap --target=bun-linux-arm64-modern ./src/pair.ts --outfile pair-aarch64 "
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.1",
     "elliptic": "^6.6.0",
-    "elysia": "^1.1.23",
-    "elysia-helmet": "^2.0.0",
-    "prompts": "^2.4.2"
+    "elysia": "^1.1.24",
+    "elysia-helmet": "^2.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/bun": "^1.1.12",
+    "@types/bun": "^1.1.13",
     "@types/elliptic": "^6.4.18",
-    "@types/prompts": "^2.4.9"
+    "@types/prompts": "^2.4.9",
+    "prompts": "^2.4.2"
   },
   "peerDependencies": {
     "typescript": "^5.6.3"
