--- a/biome.json
+++ b/biome.json
@@ -1,32 +1,27 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
-  "linter": {
-    "enabled": true,
-    "rules": {
-      "recommended": true,
-      "nursery": {
-        "useSortedClasses": {
-          "level": "warn",
-          "options": {
-            "functions": ["cn"]
-          }
-        }
+  "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on",
+        "useSortedKeys": "on"
       }
     }
   },
+  "files": {
+    "includes": ["**", "!**/dist"]
+  },
   "formatter": {
-    "enabled": true,
-    "formatWithErrors": false,
     "attributePosition": "auto",
+    "formatWithErrors": false,
     "indentStyle": "space",
     "indentWidth": 2,
     "lineEnding": "lf",
     "lineWidth": 120
   },
-  "files": {
-    "ignore": ["dist/**"]
+  "linter": {
+    "rules": {
+      "recommended": true
+    }
   }
 }
